{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 104,
  "lineage": "f5bd6645-4837-426f-f282-4e0d3418129a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:loadbalancer/app/ast-alb/e23fe3b39f0ead0f",
            "arn_suffix": "app/ast-alb/e23fe3b39f0ead0f",
            "dns_name": "ast-alb-1973037107.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:loadbalancer/app/ast-alb/e23fe3b39f0ead0f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ast-alb",
            "security_groups": [
              "sg-0dfe4b762cfdfdfb0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01216e119e39c8b9b"
              },
              {
                "subnet_id": "subnet-07ed3a0faa6ed398a"
              }
            ],
            "subnets": [
              "subnet-01216e119e39c8b9b",
              "subnet-07ed3a0faa6ed398a"
            ],
            "vpc_id": "vpc-042580b6e68570552",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.ast-public",
            "module.vpc.aws_subnet.ast-public-2",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:listener/app/ast-alb/e23fe3b39f0ead0f/74c4ce9e23c2af37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-default/747547148e759aae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:listener/app/ast-alb/e23fe3b39f0ead0f/74c4ce9e23c2af37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:loadbalancer/app/ast-alb/e23fe3b39f0ead0f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_target_group.default",
            "module.alb.aws_security_group.alb",
            "module.vpc.aws_subnet.ast-public",
            "module.vpc.aws_subnet.ast-public-2",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-default/747547148e759aae",
            "arn_suffix": "targetgroup/ast-alb-default/747547148e759aae",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-default/747547148e759aae",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ast-alb-default",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:security-group/sg-0dfe4b762cfdfdfb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfe4b762cfdfdfb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ast-alb_sg",
            "name_prefix": "",
            "owner_id": "360760555806",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:security-group/sg-05fbaee126333c8e2",
            "description": "Used in ast-cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fbaee126333c8e2",
            "ingress": [],
            "name": "ast-cluster_ast-instances",
            "name_prefix": "",
            "owner_id": "360760555806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cluster": "ast-cluster",
              "InstanceGroup": "ast-instances"
            },
            "tags_all": {
              "Cluster": "ast-cluster",
              "InstanceGroup": "ast-instances"
            },
            "timeouts": null,
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "aws_ecs_cluster.ast-cluster",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_instances",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "outbound_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4255619989",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-05fbaee126333c8e2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "aws_ecs_cluster.ast-cluster",
            "module.ecs_instances.aws_security_group.instance",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_nodejs",
      "mode": "managed",
      "type": "aws_alb_listener_rule",
      "name": "forward_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-sample-nodejs/0dff3d20e9534cb4",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:listener-rule/app/ast-alb/e23fe3b39f0ead0f/74c4ce9e23c2af37/3c5c955c625f2efc",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:listener-rule/app/ast-alb/e23fe3b39f0ead0f/74c4ce9e23c2af37/3c5c955c625f2efc",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:listener/app/ast-alb/e23fe3b39f0ead0f/74c4ce9e23c2af37",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.alb.aws_alb_listener.http",
            "module.ecs_service_nodejs.aws_alb_target_group.service_target",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service_nodejs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-sample-nodejs/0dff3d20e9534cb4",
            "arn_suffix": "targetgroup/ast-alb-sample-nodejs/0dff3d20e9534cb4",
            "deregistration_delay": 60,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:360760555806:targetgroup/ast-alb-sample-nodejs/0dff3d20e9534cb4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ast-alb-sample-nodejs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.alb.aws_alb.alb",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ast-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-012c102a5d9765dc9",
            "domain": "vpc",
            "id": "eipalloc-08da6162927b91821",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c4ca4be6c963b542",
            "private_dns": "ip-10-0-1-61.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.61",
            "public_dns": "ec2-18-142-5-127.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.142.5.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ast-eip"
            },
            "tags_all": {
              "Name": "ast-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ast-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:internet-gateway/igw-084c03f28cfc104be",
            "id": "igw-084c03f28cfc104be",
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-igw"
            },
            "tags_all": {
              "Name": "ast-igw"
            },
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ast-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08da6162927b91821",
            "connectivity_type": "public",
            "id": "nat-0986fa89c3b6cc155",
            "network_interface_id": "eni-0c4ca4be6c963b542",
            "private_ip": "10.0.1.61",
            "public_ip": "18.142.5.127",
            "subnet_id": "subnet-07ed3a0faa6ed398a",
            "tags": {
              "Name": "ast-nat"
            },
            "tags_all": {
              "Name": "ast-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.ast-eip",
            "module.vpc.aws_internet_gateway.ast-igw",
            "module.vpc.aws_subnet.ast-public",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ast-rt-priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:route-table/rtb-0c6ab937f28f76337",
            "id": "rtb-0c6ab937f28f76337",
            "owner_id": "360760555806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0986fa89c3b6cc155",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.ast-nat",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ast-rt-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:route-table/rtb-0709c7d7f3b96f87a",
            "id": "rtb-0709c7d7f3b96f87a",
            "owner_id": "360760555806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-084c03f28cfc104be",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ast-igw",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ast-priv-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0357828454d956649",
            "route_table_id": "rtb-0c6ab937f28f76337",
            "subnet_id": "subnet-04be360091e6bc26b"
          },
          "dependencies": [
            "module.vpc.aws_eip.ast-eip",
            "module.vpc.aws_internet_gateway.ast-igw",
            "module.vpc.aws_nat_gateway.ast-nat",
            "module.vpc.aws_route_table.ast-rt-priv",
            "module.vpc.aws_subnet.ast-private",
            "module.vpc.aws_subnet.ast-public",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ast-priv2-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab4f872a3b01e615",
            "route_table_id": "rtb-0c6ab937f28f76337",
            "subnet_id": "subnet-0e560987ffefa62bf"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.ast-nat",
            "module.vpc.aws_route_table.ast-rt-priv",
            "module.vpc.aws_subnet.ast-private-2",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ast-pub-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08acf29f153397ef4",
            "route_table_id": "rtb-0709c7d7f3b96f87a",
            "subnet_id": "subnet-07ed3a0faa6ed398a"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ast-igw",
            "module.vpc.aws_route_table.ast-rt-pub",
            "module.vpc.aws_subnet.ast-public",
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ast-pub2-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082bfc56300d807c2",
            "route_table_id": "rtb-0709c7d7f3b96f87a",
            "subnet_id": "subnet-01216e119e39c8b9b"
          },
          "dependencies": [
            "module.vpc.aws_route_table.ast-rt-pub",
            "module.vpc.aws_subnet.ast-public-2"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ast-allow-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:security-group/sg-020bec2f1ede4c8ca",
            "description": "Allow TLS \u0026 SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020bec2f1ede4c8ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ast-allow-default",
            "name_prefix": "",
            "owner_id": "360760555806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ast-allow-default"
            },
            "tags_all": {
              "Name": "ast-allow-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ast-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:subnet/subnet-04be360091e6bc26b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-04be360091e6bc26b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-private"
            },
            "tags_all": {
              "Name": "ast-private"
            },
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ast-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:subnet/subnet-0e560987ffefa62bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0e560987ffefa62bf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-private"
            },
            "tags_all": {
              "Name": "ast-private"
            },
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ast-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:subnet/subnet-07ed3a0faa6ed398a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07ed3a0faa6ed398a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-public"
            },
            "tags_all": {
              "Name": "ast-public"
            },
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ast-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:subnet/subnet-01216e119e39c8b9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01216e119e39c8b9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-public"
            },
            "tags_all": {
              "Name": "ast-public"
            },
            "vpc_id": "vpc-042580b6e68570552"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ast-test"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ast-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:360760555806:vpc/vpc-042580b6e68570552",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0af9b4b83ef49c3",
            "default_route_table_id": "rtb-0d04234f9c60c3bb2",
            "default_security_group_id": "sg-0ba9575192abd2c7e",
            "dhcp_options_id": "dopt-b6f34fd1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-042580b6e68570552",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d04234f9c60c3bb2",
            "owner_id": "360760555806",
            "tags": {
              "Name": "ast-test"
            },
            "tags_all": {
              "Name": "ast-test"
            }
          }
        }
      ]
    }
  ]
}